[gd_scene load_steps=9 format=2]

[ext_resource path="res://Layout/Layout.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game/Level 3.gd" type="Script" id=2]
[ext_resource path="res://Game/Vehicles/CarPath.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game/Vehicles/Car.gd" type="Script" id=4]
[ext_resource path="res://Game/Player/AndyPath.tscn" type="PackedScene" id=5]
[ext_resource path="res://Game/Player/Andy.gd" type="Script" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 675.521, -250.98, 0, 0, 0, 0, 893.77, -138.677 )
}

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -82.814, -141.229, 0, 0, 0, 0, 462.087, 186.721 )
}

[node name="Level 3" groups=[
"Level",
] instance=ExtResource( 1 )]
script = ExtResource( 2 )
currentLevel = 3
Points = 2

[node name="Road" parent="Node2D" index="0"]
tile_data = PoolIntArray( -524288, 0, 0, -524287, 0, 0, -524286, 0, 0, -524285, 0, 0, -524284, 0, 0, -524283, 0, 0, -524282, 0, 0, -524281, 0, 0, -524280, 0, 0, -524279, 0, 0, -524278, 0, 0, -524277, 0, 0, -524276, 0, 0, -524275, 0, 0, -458752, 0, 0, -458751, 0, 0, -458750, 0, 0, -458749, 0, 0, -458748, 0, 0, -458747, 0, 0, -458746, 0, 0, -458745, 0, 0, -458744, 0, 0, -458743, 0, 0, -458742, 0, 0, -458741, 0, 0, -458740, 0, 0, -458739, 0, 0, -393216, 0, 0, -393215, 0, 0, -393214, 0, 0, -393213, 0, 0, -393212, 0, 0, -393211, 0, 0, -393210, 0, 0, -393209, 0, 0, -393208, 0, 0, -393207, 0, 0, -393206, 0, 0, -393205, 0, 0, -393204, 0, 0, -393203, 0, 0, -327680, 0, 0, -327679, 0, 0, -327678, 0, 0, -327677, 0, 0, -327676, 0, 0, -327675, 0, 0, -327674, 0, 0, -327673, 0, 0, -327672, 0, 0, -327671, 0, 0, -327670, 0, 0, -327669, 0, 0, -327668, 0, 0, -327667, 0, 0, -262144, 7, 0, -262143, 7, 0, -262142, 7, 0, -262141, 7, 0, -262140, 7, 0, -262139, 7, 0, -262138, 7, 0, -262137, 7, 0, -262136, 7, 0, -262135, 7, 0, -262134, 7, 0, -262133, 7, 0, -262132, 7, 0, -262131, 7, 0, -262130, 7, 0, -196608, 0, 0, -196607, 0, 0, -196606, 0, 0, -196605, 0, 0, -196604, 0, 0, -196603, 0, 0, -196602, 0, 0, -196601, 0, 0, -196600, 0, 0, -196599, 0, 0, -196598, 0, 0, -196597, 0, 0, -196596, 0, 0, -196595, 0, 0, -196594, 0, 0, -196593, 0, 0, -131072, 5, 0, -131071, 5, 0, -131070, 5, 0, -131069, 5, 0, -131068, 5, 0, -131067, 5, 0, -131066, 5, 0, -131065, 5, 0, -131064, 5, 0, -131063, 5, 0, -131062, 5, 0, -131061, 5, 0, -131060, 5, 0, -131059, 5, 0, -131058, 5, 0, -65536, 3, 0, -65535, 3, 0, -65534, 3, 0, -65533, 3, 0, -65532, 3, 0, -65531, 3, 0, -65530, 3, 0, -65529, 3, 0, -65528, 3, 0, -65527, 3, 0, -65526, 3, 0, -65525, 3, 0, -65524, 3, 0, -65523, 3, 0, -65522, 3, 0, -65521, 3, 0, -65520, 3, 0, 0, 5, 0, 1, 5, 0, 2, 5, 0, 3, 5, 0, 4, 5, 0, 5, 5, 0, 6, 5, 0, 7, 5, 0, 8, 5, 0, 9, 5, 0, 10, 5, 0, 11, 5, 0, 12, 5, 0, 13, 5, 0, 14, 5, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 5, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 131072, 1, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 1, 0, 131082, 1, 0, 131083, 5, 0, 131084, 1, 0, 131085, 1, 0, 131086, 1, 0, 196608, 1, 0, 196609, 1, 0, 196610, 1, 0, 196611, 1, 0, 196612, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 1, 0, 196616, 1, 0, 196617, 1, 0, 196618, 1, 0, 196619, 5, 0, 196620, 1, 0, 196621, 1, 0, 196622, 1, 0, 262144, 1, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 1, 0, 262155, 5, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 327680, 1, 0, 327681, 1, 0, 327682, 1, 0, 327683, 1, 0, 327684, 1, 0, 327685, 1, 0, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1, 0, 327690, 1, 0, 327691, 1, 0, 327692, 1, 0, 327693, 1, 0, 327694, 1, 0, 393216, 1, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 0, 393229, 1, 0, 393230, 1, 0 )

[node name="Toko" parent="Node2D/YSort" index="1"]
tile_data = PoolIntArray( 12, 3, 0 )

[node name="Car1" type="Path2D" parent="Node2D/YSort" index="2"]
curve = SubResource( 1 )
script = ExtResource( 4 )
MaksimalKecepatan = 108

[node name="CarPath" parent="Node2D/YSort/Car1" index="0" instance=ExtResource( 3 )]
position = Vector2( 675.521, -250.98 )

[node name="Andy" type="Path2D" parent="Node2D/YSort" index="3"]
curve = SubResource( 2 )
script = ExtResource( 6 )
MaksimalKecepatan = 247

[node name="AndyPath" parent="Node2D/YSort/Andy" index="0" instance=ExtResource( 5 )]
position = Vector2( -82.814, -141.229 )

[node name="Finish" parent="Node2D" index="2"]
position = Vector2( 666.291, 297.093 )

[node name="Area2D" type="Area2D" parent="Node2D" index="3"]
collision_layer = 2147483650
collision_mask = 2

[node name="Stop" type="CollisionPolygon2D" parent="Node2D/Area2D" index="0"]
position = Vector2( 18.4998, -8.40897 )
polygon = PoolVector2Array( 967.796, 462.943, 898.874, 518.38, 918.352, 531.865, 988.773, 479.424 )
[connection signal="Tabrakan" from="Node2D/YSort/Andy" to="." method="_on_Andy_Tabrakan"]
[connection signal="Finish" from="Node2D/Finish" to="." method="_on_Finish_Finish"]
[connection signal="TimeOut" from="Node2D/Finish" to="." method="_on_Finish_TimeOut"]
[connection signal="ButtonCarGo" from="GUI" to="." method="_on_GUI_ButtonCarGo"]
[connection signal="ButtonCarStop" from="GUI" to="." method="_on_GUI_ButtonCarStop"]
[connection signal="ButtonContinue" from="GUI" to="." method="_on_GUI_ButtonContinue"]
[connection signal="ButtonHome" from="GUI" to="." method="_on_GUI_ButtonHome"]
[connection signal="ButtonNext" from="GUI" to="." method="_on_GUI_ButtonNext"]
[connection signal="ButtonPause" from="GUI" to="." method="_on_GUI_ButtonPause"]
[connection signal="ButtonRestart" from="GUI" to="." method="_on_GUI_ButtonRestart"]
[connection signal="ButtonSign" from="GUI" to="." method="_on_GUI_ButtonSign"]
[connection signal="CircleLoad" from="GUI" to="." method="_on_GUI_CircleLoad"]
[connection signal="CircleNext" from="GUI" to="." method="_on_GUI_CircleNext"]
[connection signal="SignDown" from="GUI" to="." method="_on_GUI_SignDown"]
